<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activites.activity_login">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="150dp"
      android:layout_marginTop="100dp"
      android:layout_height="150dp"
      app:srcCompat="@drawable/logo" />

  <EditText
      android:id="@+id/Phone"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="50dp"
      android:gravity="center_horizontal"
      android:hint="@string/Phone_number"
      android:inputType="number"
      android:textAlignment="center" />
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:gravity="center"
      app:passwordToggleEnabled="true">

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textAlignment="center" />
  </android.support.design.widget.TextInputLayout>
  <Button
      android:layout_width="200dp"
      android:id="@+id/login"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:text="Login"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textSize="24dp"
      android:gravity="center"
      android:background="@android:color/holo_red_light"/>
  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

  </LinearLayout>

  <TextView
      android:layout_width="156dp"
      android:layout_height="37dp"
      android:layout_marginTop="40dp"
      android:text="@string/not_registered"
      android:textSize="19dp" />

  <TextView
      android:id="@+id/register"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="5dp"
      android:text="@string/register"
      android:textStyle="bold|italic"
      android:textColor="@color/colorPrimary"

      android:textSize="19dp" />


</LinearLayout>
